-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
dev
-
None
-
clang-cl 16.0.2
-
-
2550568a9 (dev)
clang-cl 16.0.2 gives the following warning when building qtbase:
qtbase\src\corelib\global\qlogging.cpp(2040,9): warning: function 'qt_message_fatal' declared 'noreturn' should not return [-Winvalid-noreturn] return; // ignore ^ 1 warning generated.
For Gerrit Dashboard: QTBUG-113351 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
449336,3 | Enable [[noreturn]] attribute for non-MSVC compilers on Windows | dev | qt/qtbase | Status: MERGED | +2 | 0 |